[tool.poetry]
name = "meeting-summarizer"
version = "0.1.0"
description = "A tool to summarize meeting content"
authors = ["famousfields <willfields92@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
torch = "^2.8.0"
transformers = "^4.56.1"
openai-whisper = "^20250625"
sounddevice = "^0.5.2"
huggingface-hub = "^0.34.4"
sentencepiece = "^0.2.1"
accelerate = "^1.10.1"
pynput = "^1.8.1"
pyannote-audio = "^3.3.2"
python-dotenv = "^1.1.1"
librosa = "^0.11.0"
soundcard = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
